# docs/swagger.json
@@ -176,6 +176,38 @@
                 }
             }
         },
+        "/questions/find-by-game": {
+            "get": {
+                "description": "Возвращает список всех вопросов для конкретной игры",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "questions"
+                ],
+                "summary": "Получить вопросы по ID игры",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID игры",
+                        "name": "gameId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_mobqom_questions_internal_domain.Question"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/questions/random": {
             "get": {
                 "description": "Возвращает случайный вопрос из базы данных",
@@ -186,6 +218,15 @@
                     "questions"
                 ],
                 "summary": "Получить случайный вопрос",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID игры",
+                        "name": "gameId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
